// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Circle should render 1`] = `
<div>
  <div
    class="sc-AxjAm kgSvxm"
  />
</div>
`;

exports[`Circle should render as avatar 1`] = `
<div>
  <div
    class="sc-AxjAm kJdJwn"
  />
</div>
`;

exports[`Circle should render as blank 1`] = `
<div>
  <div
    class="sc-AxjAm kgSvxm"
  />
</div>
`;

exports[`Circle should render small 1`] = `
<div>
  <div
    class="sc-AxjAm OuGZH"
  />
</div>
`;

exports[`Circle should render with content 1`] = `
<div>
  <div
    class="sc-AxjAm OuGZH"
  >
    <div
      data-testid="circle__content"
    />
  </div>
</div>
`;

exports[`Circle should render with no shadow 1`] = `
<div>
  <div
    class="sc-AxjAm ccTRdx"
  />
</div>
`;
